--- a/Nomination/NominationCard.html
+++ b/Nomination/NominationCard.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="styles.css" />
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
-        type='text/css'>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <title>Nomination Card</title>
 </head>
 
@@ -19,9 +19,6 @@
 
     <div class="flip-card">
         <div class="flip-card-inner">
-            <div class="flip-card-front">
-                <img src="hh.jpg">
-            </div>
             <div class="flip-card-back">
                 <div class="back-header">
                     <img src="logo.jpg">
